--- a/css/cruzodiac.css
+++ b/css/cruzodiac.css
@@ -2,10 +2,14 @@ html {
   width: 100%;
   height: 100%; }
 
+body {
+  -webkit-perspective: 300px; }
+
 h1 {
   font-family: monospace;
   font-size: 2rem;
-  color: #323232; }
+  color: #323232;
+  padding: 3rem; }
 
 p {
   font-family: monospace;
@@ -38,6 +42,19 @@ p {
   z-index: 200;
   font-size: 50px;
   color: #ffffff; }
+
+#introtext {
+  position: absolute;
+  width: 640px;
+  height: 60px;
+  left: 0px;
+  top: 226px;
+  text-align: center;
+  z-index: 220;
+  font-size: 30px;
+  color: #ffffff;
+  display: none;
+  opacity: 0; }
 
 #allimages {
   position: absolute;
