--- a/css/cruzodiac.scss
+++ b/css/cruzodiac.scss
@@ -7,10 +7,15 @@ html {
 	height: 100%;
 }
 
+body {
+	-webkit-perspective: 300px;
+}
+
 h1 {
 	font-family: monospace;
 	font-size: 2rem;
 	color: $gray;
+	padding: 3rem;
 }
 
 p {
@@ -47,6 +52,20 @@ p {
 	z-index: 200;
 	font-size: 50px;
 	color: #ffffff;
+}
+
+#introtext {
+	position: absolute;
+	width: 640px;
+	height: 60px;
+	left: 0px;
+	top: 226px;
+	text-align: center;
+	z-index: 220;
+	font-size: 30px;
+	color: #ffffff;
+	display: none;
+	opacity: 0;
 }
 
 #allimages {
