--- a/css/cruzodiac.scss
+++ b/css/cruzodiac.scss
@@ -37,7 +37,9 @@ p {
 	width: 640px;
 	height: 480px;
 	margin-left: -320px;
+	margin-top: -270px;
 	left: 50%;
+	top: 50%;
 	overflow: hidden;
 	background: black;
 }
