--- a/css/cruzodiac.css
+++ b/css/cruzodiac.css
@@ -3,7 +3,15 @@ html {
   height: 100%; }
 
 body {
-  -webkit-perspective: 300px; }
+  -webkit-perspective: 300px;
+  position: fixed;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%; }
+
+input:focus {
+  outline: none; }
 
 h1 {
   font-family: monospace;
@@ -28,7 +36,9 @@ p {
   width: 640px;
   height: 480px;
   margin-left: -320px;
+  margin-top: -270px;
   left: 50%;
+  top: 50%;
   overflow: hidden;
   background: black; }
 
