--- a/css/cruzodiac.scss
+++ b/css/cruzodiac.scss
@@ -9,6 +9,15 @@ html {
 
 body {
 	-webkit-perspective: 300px;
+	position: fixed;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+}
+
+input:focus {
+	outline: none;
 }
 
 h1 {
