--- a/css/cruzodiac.scss
+++ b/css/cruzodiac.scss
@@ -76,6 +76,7 @@ p {
 	text-align: center;
 	z-index: 220;
 	font-size: 30px;
+	font-family: monospace;
 	color: #ffffff;
 	display: none;
 	opacity: 0;
