--- a/css/cruzodiac.css
+++ b/css/cruzodiac.css
@@ -8,16 +8,11 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  font-family: monospace; }
 
 input:focus {
   outline: none; }
-
-h1 {
-  font-family: monospace; }
-
-p {
-  font-family: monospace; }
 
 .wrapper {
   display: flex;
