--- a/css/cruzodiac.scss
+++ b/css/cruzodiac.scss
@@ -9,12 +9,17 @@ html {
 
 body {
 	-webkit-perspective: 300px;
+	background: #ffffff;
+	color: #0c0c0c;
 	position: fixed;
 	margin: 0;
 	padding: 0;
 	width: 100%;
 	height: 100%;
-	font-family: monospace;
+	font-weight: 500;
+	font-size: 26px;
+	-webkit-font-smoothing: antialiased;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 input:focus {
