--- a/css/cruzodiac.css
+++ b/css/cruzodiac.css
@@ -4,8 +4,9 @@ html {
 
 body {
   -webkit-perspective: 300px;
-  background: #ffffff;
-  color: #0c0c0c;
+  perspective: 300px;
+  background: #f4f5f5;
+  color: #141414;
   position: fixed;
   margin: 0;
   padding: 0;
@@ -25,8 +26,8 @@ input:focus {
   left: 50%;
   top: 50%;
   overflow: hidden;
-  outline: 1rem red solid;
-  background-color: red; }
+  outline: 1rem #f71c0e solid;
+  background-color: #f71c0e; }
 
 #loader {
   position: absolute;
@@ -49,7 +50,7 @@ input:focus {
   z-index: 220;
   font-size: 1rem;
   font-family: monospace;
-  color: #ffffff;
+  color: #f4f5f5;
   display: none;
   opacity: 0; }
 
@@ -74,21 +75,44 @@ input:focus {
   left: 38400px; }
 
 .footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   position: fixed;
-  bottom: 1.5rem;
-  width: 20rem;
-  margin-left: -10rem;
-  left: 50%;
-  color: #242a2c;
-  text-align: center;
+  bottom: 2rem;
+  width: 100%;
   font-size: 1rem;
   z-index: 100; }
-  .footer picture {
-    padding-top: 0.75rem;
-    padding-left: 0.75rem;
+  .footer a {
+    position: relative;
+    margin-top: 1.5rem;
     margin-right: 2rem;
-    outline: 0.25rem black solid;
-    border-bottom: 0.75rem black solid;
-    background-color: yellow; }
+    color: #0077c3;
+    text-decoration: none;
+    transition: all 5s ease-out; }
+    .footer a:before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      bottom: 0;
+      left: 0;
+      z-index: -1;
+      background-color: #0077c3;
+      visibility: hidden;
+      -webkit-transform: scaleX(0);
+      transform: scaleX(0);
+      -webkit-transition: all 0.3s ease-in-out 0s;
+      transition: all 0.3s ease-in-out 0s; }
+    .footer a:hover:before {
+      visibility: visible;
+      -webkit-transform: scaleX(1);
+      transform: scaleX(1); }
+  .footer picture {
+    margin-left: 2rem;
+    padding: 0.5rem;
+    outline: 0.25rem #141414 solid;
+    border-bottom: 0.75rem #141414 solid;
+    background-color: #e8e9bb; }
 
 /*# sourceMappingURL=cruzodiac.css.map */
