--- a/css/cruzodiac.scss
+++ b/css/cruzodiac.scss
@@ -24,8 +24,6 @@ body {
 	font-family: monospace;
 }
 
-
-
 input:focus {
 	outline: none;
 }
@@ -101,43 +99,50 @@ input:focus {
 	flex-direction: row;
 	justify-content: space-between;
   position: fixed;
-  bottom: 2rem;
+	bottom: 2rem;
   width: 100%;
   font-size: 1rem;
-  z-index:100;
+}
+
+
+.business {
+	margin-left: 2rem;
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+	outline: 0.25rem $blackish solid;
+	border-bottom: 0.75rem $blackish solid;
+	background-color: $yellow;
 	& a {
-		position: relative;
-		margin-top: 1.5rem;
-		margin-right: 2rem;
+		padding: 0.5rem;
+	}
+}
+
+.party {
+	position: relative;
+	margin-top: 1.5rem;
+	margin-right: 2rem;
+	& a{
 		color: $blue;
 		text-decoration: none;
-		transition: all 5s ease-out;
-		&:before {
-		  content: "";
-		  position: absolute;
-		  width: 100%;
-		  height: 1px;
-		  bottom: 0;
-		  left: 0;
-			z-index: -1;
-		  background-color: $blue;
-		  visibility: hidden;
-		  -webkit-transform: scaleX(0);
-		  transform: scaleX(0);
-		  -webkit-transition: all 0.3s ease-in-out 0s;
-		  transition: all 0.3s ease-in-out 0s;
-		}
-		&:hover:before {
-		  visibility: visible;
-		  -webkit-transform: scaleX(1);
-		  transform: scaleX(1);
-		}
 	}
-	& picture {
-		margin-left: 2rem;
-		padding: 0.5rem;
-		outline: 0.25rem $blackish solid;
-		border-bottom: 0.75rem $blackish solid;
-		background-color: $yellow;
+	&:before {
+		content: "";
+		position: absolute;
+		width: 100%;
+		height: 1px;
+		bottom: 0;
+		left: 0;
+		z-index: -1;
+		background-color: $blue;
+		visibility: hidden;
+		-webkit-transform: scaleX(0);
+		transform: scaleX(0);
+		-webkit-transition: all 0.3s ease-in-out 0s;
+		transition: all 0.3s ease-in-out 0s;
+	}
+	&:hover:before {
+		visibility: visible;
+		-webkit-transform: scaleX(1);
+		transform: scaleX(1);
 	}
 }
