--- a/css/cruzodiac.scss
+++ b/css/cruzodiac.scss
@@ -23,6 +23,11 @@ body {
 	height: 100%;
 	font-family: monospace;
 	font-size: 2rem;
+	text-shadow:
+   -1px -1px 0 $red,
+    1px -1px 0 $red,
+    -1px 1px 0 $red,
+     1px 1px 0 $red;
 }
 
 input:focus {
