--- a/css/cruzodiac.scss
+++ b/css/cruzodiac.scss
@@ -51,7 +51,12 @@ input:focus {
 	text-align: center;
 	z-index: 200;
 	font-size: 3rem;
-	color: #ffffff;
+	color: $cream;
+	text-shadow:
+   -1px -1px 0 $red,
+    1px -1px 0 $red,
+    -1px 1px 0 $red,
+     1px 1px 0 $red;
 }
 
 #introtext {
@@ -68,10 +73,14 @@ input:focus {
 	display: none;
 	opacity: 0;
 	text-shadow:
-   -1px -1px 0 $red,
-    1px -1px 0 $red,
-    -1px 1px 0 $red,
-     1px 1px 0 $red;
+   -2px -2px 0 $red,
+	  -2px 0px 0 $red,
+		 2px 0px 0 $red,
+		0px -2px 0 $red,
+ 		 0px 2px 0 $red,
+    2px -2px 0 $red,
+    -2px 2px 0 $red,
+     2px 2px 0 $red;
 }
 
 #allimages {
