--- a/css/cruzodiac.css
+++ b/css/cruzodiac.css
@@ -13,7 +13,8 @@ body {
   width: 100%;
   height: 100%;
   font-family: monospace;
-  font-size: 2rem; }
+  font-size: 3rem;
+  text-shadow: -2px -2px 0 #f71c0e, -2px 0px 0 #f71c0e, 2px 0px 0 #f71c0e, 0px -2px 0 #f71c0e, 0px 2px 0 #f71c0e, 2px -2px 0 #f71c0e, -2px 2px 0 #f71c0e, 2px 2px 0 #f71c0e; }
 
 input:focus {
   outline: none; }
@@ -39,8 +40,7 @@ input:focus {
   text-align: center;
   z-index: 200;
   font-size: 3rem;
-  color: #f4f5f5;
-  text-shadow: -1px -1px 0 #f71c0e, 1px -1px 0 #f71c0e, -1px 1px 0 #f71c0e, 1px 1px 0 #f71c0e; }
+  color: #f4f5f5; }
 
 #introtext {
   position: absolute;
@@ -52,10 +52,9 @@ input:focus {
   z-index: 220;
   font-size: 3rem;
   font-family: monospace;
-  color: #f4f5f5;
+  color: #f71c0e;
   display: none;
-  opacity: 0;
-  text-shadow: -2px -2px 0 #f71c0e, -2px 0px 0 #f71c0e, 2px 0px 0 #f71c0e, 0px -2px 0 #f71c0e, 0px 2px 0 #f71c0e, 2px -2px 0 #f71c0e, -2px 2px 0 #f71c0e, 2px 2px 0 #f71c0e; }
+  opacity: 0; }
 
 #allimages {
   position: absolute;
