--- a/css/cruzodiac.scss
+++ b/css/cruzodiac.scss
@@ -61,11 +61,6 @@ input:focus {
 	z-index: 200;
 	font-size: 3rem;
 	color: $cream;
-	text-shadow:
-   -1px -1px 0 $red,
-    1px -1px 0 $red,
-    -1px 1px 0 $red,
-     1px 1px 0 $red;
 }
 
 #introtext {
@@ -78,7 +73,7 @@ input:focus {
 	z-index: 220;
 	font-size: 3rem;
 	font-family: monospace;
-	color: $cream;
+	color: $red;
 	display: none;
 	opacity: 0;
 }
