--- a/css/cruzodiac.scss
+++ b/css/cruzodiac.scss
@@ -23,15 +23,6 @@ body {
 	height: 100%;
 	font-family: monospace;
 	font-size: 3rem;
-	text-shadow:
-   -2px -2px 0 $red,
-	  -2px 0px 0 $red,
-		 2px 0px 0 $red,
-		0px -2px 0 $red,
- 		 0px 2px 0 $red,
-    2px -2px 0 $red,
-    -2px 2px 0 $red,
-     2px 2px 0 $red;
 }
 
 input:focus {
@@ -73,9 +64,18 @@ input:focus {
 	z-index: 220;
 	font-size: 3rem;
 	font-family: monospace;
-	color: $red;
+	color: $cream;
 	display: none;
 	opacity: 0;
+	text-shadow:
+   -2px -2px 0 $red,
+	  -2px 0px 0 $red,
+		 2px 0px 0 $red,
+		0px -2px 0 $red,
+ 		 0px 2px 0 $red,
+    2px -2px 0 $red,
+    -2px 2px 0 $red,
+     2px 2px 0 $red;
 }
 
 #allimages {
