--- a/css/cruzodiac.scss
+++ b/css/cruzodiac.scss
@@ -25,6 +25,16 @@ body {
 	font-size: 3rem;
 }
 
+// text-shadow:
+//  -2px -2px 0 $red,
+// 	-2px 0px 0 $red,
+// 	 2px 0px 0 $red,
+// 	0px -2px 0 $red,
+// 	 0px 2px 0 $red,
+// 	2px -2px 0 $red,
+// 	-2px 2px 0 $red,
+// 	 2px 2px 0 $red;
+
 input:focus {
 	outline: none;
 }
