--- a/css/cruzodiac.css
+++ b/css/cruzodiac.css
@@ -51,9 +51,10 @@ input:focus {
   z-index: 220;
   font-size: 3rem;
   font-family: monospace;
-  color: #f71c0e;
+  color: #f4f5f5;
   display: none;
-  opacity: 0; }
+  opacity: 0;
+  text-shadow: -2px -2px 0 #f71c0e, -2px 0px 0 #f71c0e, 2px 0px 0 #f71c0e, 0px -2px 0 #f71c0e, 0px 2px 0 #f71c0e, 2px -2px 0 #f71c0e, -2px 2px 0 #f71c0e, 2px 2px 0 #f71c0e; }
 
 #allimages {
   position: absolute;
