--- a/css/cruzodiac.scss
+++ b/css/cruzodiac.scss
@@ -25,16 +25,6 @@ body {
 	font-size: 3rem;
 }
 
-// text-shadow:
-//  -2px -2px 0 $red,
-// 	-2px 0px 0 $red,
-// 	 2px 0px 0 $red,
-// 	0px -2px 0 $red,
-// 	 0px 2px 0 $red,
-// 	2px -2px 0 $red,
-// 	-2px 2px 0 $red,
-// 	 2px 2px 0 $red;
-
 input:focus {
 	outline: none;
 }
@@ -74,9 +64,18 @@ input:focus {
 	z-index: 220;
 	font-size: 3rem;
 	font-family: monospace;
-	color: $red;
+	color: $cream;
 	display: none;
 	opacity: 0;
+	text-shadow:
+			-2px -2px 0 $red,
+			-2px 0px 0 $red,
+			2px 0px 0 $red,
+			0px -2px 0 $red,
+			0px 2px 0 $red,
+			2px -2px 0 $red,
+			-2px 2px 0 $red,
+			2px 2px 0 $red;
 }
 
 #allimages {
